Fixing bug with medium-sized windows, cutting off the dropdown nav

--- a/src/main/resources/ui/sqlfiddle/www/css/fiddle_bootstrap_overrides.less
+++ b/src/main/resources/ui/sqlfiddle/www/css/fiddle_bootstrap_overrides.less
@@ -7,6 +7,9 @@
 /* Bootstrap overrides */
 
 
+.nav-collapse.in {
+  height: auto !important;
+}
 .navbar .nav.pull-right { margin-left: 2px; }
 
 .nav-collapse>.nav { margin-right: 2px; }
