--- a/src/main/resources/ui/sqlfiddle/www/css/fiddle_responsive.less
+++ b/src/main/resources/ui/sqlfiddle/www/css/fiddle_responsive.less
@@ -17,8 +17,8 @@
  *     (but before we get to the collapsed nav bar view)
  */
 
-@media (min-width:820px) and (max-width:1110px) { .nav-collapse .pull-right { display: none; } }
-@media (min-width:820px) and (max-width:1210px) { .nav-collapse .pull-right .optional { display: none; } }
+@media (min-width:980px) and (max-width:1110px) { .nav-collapse .pull-right { display: none; } }
+@media (min-width:980px) and (max-width:1210px) { .nav-collapse .pull-right .optional { display: none; } }
 
 
 @media (max-width:767px)
